<resources>
    <string name="app_name">Practica5</string>
    <string name="main2_description_card1">City of Los Angeles</string>
    <string name="main2_desription2_card1">USA, Los Angeles - 2 weeks</string>
    <string name="main_description_card2">Beach Vacation</string>
    <string name="main_description2_card2">Maldives - 3 weeks</string>
    <string name="main_login">Login</string>
    <string name="main_user">Login</string>
    <string name="main_password">Password</string>
    <string name="main_txt_btn">Login</string>
    <string name="main_new_password">Forgot password</string>
    <string name="main_get_new_password">Get new</string>
    <string name="main_have_new_account">Do you have an account?</string>
    <string name="main_create_new_account_txt">Create new</string>
    <string name="main_name">¿Como te llamas?</string>
    <string name="main_surname">¿Y tu apellido?</string>
    <string name="main_age">¿Cuantos años tienes?</string>
    <string name="btn_txt">Me apunto</string>
    <string name="main_privacy_policy">Política de privacidad</string>
    <string name="main_ver_condiciones">Ver Condiciones</string>
    <string-array name="ages">
        <item>0-5</item>
        <item>6-11</item>
        <item>12-17</item>
        <item>18-99</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="main3_title_toolbar">Home</string>
    <string name="main2_title_toolbar">Registro</string>
    <string name="main_btn_message">Entendido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_title_toolbar">Login</string>
    <string name="main_title_collapsing_toolbar">Login</string>
    <string name="main_titulo_fragment_onboarding_app">Tu App de Viajes</string>
    <string name="main_descripcion_fragment_onboarding_app">Hola, estamos buscando a millones de usuarios\ncon inquietudes y ganas de viajar. Si eres tu? No\nlo dudes, accede a nuestra app y descubrirás\nmiles de destinos y facilidades para alquilar\ncoches, ver el tiempo...</string>
    <string name="main_txt_btn_onboarding">Next</string>
    <string name="main_titulo_fragment_onboarding_dos_app">Find your match!</string>
    <string name="main_descripcion_fragment_onboarding_dos_app">We\'ve helped millions across the nation find\ntheir perfect match...and you\'re next!</string>
    <string name="materialtextview_next">Next</string>
    <string name="btn_txt_onboarding_dos_one">Skip</string>
    <string name="btn_txt_onboarding_dos_two">Next</string>
    <string name="main_titulo_fragment_onboarding_tres_app">Find the Perfect\nRoomate</string>
    <string name="btn_txt_onboarding_tres">Login</string>
    <string name="fragment_home_one_description">Este fragment ocupa la posición 1</string>
    <string name="fragment_home_two_description">Este fragment ocupa la posición 2</string>
    <string name="fragment_home_three_description">Este fragment ocupa la posición 3</string>
    <string name="nombre_classic_car">Classic Car</string>
    <string name="precio_classic_car">$34/day</string>
    <string name="main_choose_password">Escoge una contraseña</string>
    <string name="nombre_hotel">La Meridien Barcelona</string>
    <string name="fragent_hotels_one">1</string>
    <string name="fragent_hotels_meridien">Le Meridien Barcelona</string>
    <string name="rv_hotel_information">Information</string>

</resources>