<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_two"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundOnboardingDos">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_titulo_onboarding_dos_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:text="@string/main_titulo_fragment_onboarding_dos_app"
        android:textAppearance="?appPractica5H3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_descripcion_onboarding_dos_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_descripcion_fragment_onboarding_dos_app"
        android:textAppearance="?appPractica5B2"
        app:layout_constraintTop_toBottomOf="@+id/main_titulo_onboarding_dos_app" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/main_img_onboarding_dos_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img_coche" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_btn_onboarding_dos_one_app"
        style="?appPractica5BtnFilledonboardingdosone"
        android:layout_marginStart="70dp"
        android:text="@string/btn_txt_onboarding_dos_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_img_onboarding_dos_app" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_btn_onboarding_dos_two_app"
        style="?appPractica5BtnFilledonboardingdostwo"
        android:layout_marginEnd="70dp"
        android:text="@string/btn_txt_onboarding_dos_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_img_onboarding_dos_app" />


</androidx.constraintlayout.widget.ConstraintLayout>